Make sure navbar brand image is never cut off

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -283,6 +283,8 @@
 
     img {
       max-height: calc(#{$topbar-height-md} - 10px);
+      max-width: 100%;
+      padding: 0 5px;
     }
   }
 
